##############################
# Python packaging settings: #

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kibble-scanners"
description = "The Kibble Scanners collect information for the Kibble Suite. Apache Kibble is a tool to collect, aggregate and visualize data about any software project that uses commonly known tools."
version = "1.0.0"

dependencies = [
    "python-dateutil",
    "certifi",
     "requests",
     "psutil",
    "elasticsearch",
    "PyYAML>=5.2",
]

requires-python = ">=3.9, <4.0"

authors = [
    { name = "Apache Software Foundation", email = "dev@kibble.apache.org" },
]
maintainers = [
    { name = "Apache Software Foundation", email="dev@kibble.apache.org" },
]
keywords = [
    "kibble-scanners", "data" ]

license = { text = "Apache License, Version 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Framework :: Apache Kibble-Scanners",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring"
]

dynamic = [
    "readme"
]

[project.urls]
repository = "https://github.com/apache/kibble-scanners.git"
"Bug Tracker" = "https://github.com/apache/kibble-scanners/issues"


[tool.setuptools]
dynamic = { readme = { file = ["README.md"] } }
packages.find = { where = ["src"] }
